// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsProfilePage should match snapshot 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Profile
      </h1>
      <form>
        <div
          class="el-mb11"
        >
          <div
            class="mocked-styled-130 el-form-layout"
          >
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Your full name here"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="jobTitle"
                  placeholder="What role do you have at your company"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Job Title
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-mb11"
        >
          <div
            class="mocked-styled-130 el-form-layout"
          >
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Company Name
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                MOCK_COMPANY
              </p>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Email Address
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                example@email.com
              </p>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Profile Settings
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              />
            </div>
          </div>
        </div>
        <h2
          class="el-text-base el-subtitle el-has-no-margin"
        >
          Customer Data
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
        </p>
        <div
          class="el-mb6 el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              />
              <label
                class="mocked-styled-41 el-label"
              >
                Choose Sandbox
              </label>
            </div>
          </div>
        </div>
        <div
          class="el-mb11 el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          role="status"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name info"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            aria-live="polite"
            class="el-pn-content"
          >
            Please note, you will need to log out and log back in again to see this change take effect
          </div>
        </div>
        <div
          class="mocked-styled-2 el-button-group"
        >
          <div
            class="mocked-styled-3 el-button-group-inner"
          >
            <button
              class="el-intent-primary el-button"
              type="submit"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Save Changes
            </button>
          </div>
        </div>
      </form>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r0:"
      >
        <button
          aria-controls=":r0:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Profile
    </h1>
    <form>
      <div
        class="el-mb11"
      >
        <div
          class="mocked-styled-130 el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type undefined"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="name"
                placeholder="Your full name here"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Name
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type undefined"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="jobTitle"
                placeholder="What role do you have at your company"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Job Title
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-mb11"
      >
        <div
          class="mocked-styled-130 el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Company Name
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              MOCK_COMPANY
            </p>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Email Address
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              example@email.com
            </p>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Profile Settings
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            />
          </div>
        </div>
      </div>
      <h2
        class="el-text-base el-subtitle el-has-no-margin"
      >
        Customer Data
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
      </p>
      <div
        class="el-mb6 el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            />
            <label
              class="mocked-styled-41 el-label"
            >
              Choose Sandbox
            </label>
          </div>
        </div>
      </div>
      <div
        class="el-mb11 el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          Please note, you will need to log out and log back in again to see this change take effect
        </div>
      </div>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="mocked-styled-3 el-button-group-inner"
        >
          <button
            class="el-intent-primary el-button"
            type="submit"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Save Changes
          </button>
        </div>
      </div>
    </form>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r0:"
    >
      <button
        aria-controls=":r0:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`SettingsProfilePage should match snapshot for mobile view 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div
      id="root"
    >
      <div />
    </div>
    <div>
      <div
        class="mocked-styled-93 el-snack-holder"
      />
      <h1
        class="el-text-base el-title"
      >
        Profile
      </h1>
      <form>
        <div
          class="el-mb11"
        >
          <div
            class="mocked-styled-130 el-form-layout"
          >
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="name"
                  placeholder="Your full name here"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Name
                </label>
              </div>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <div
                class="mocked-styled-40 el-input-group"
              >
                <input
                  aria-label="Input type undefined"
                  class="mocked-styled-38 el-input"
                  id="test-static-id"
                  name="jobTitle"
                  placeholder="What role do you have at your company"
                />
                <label
                  class="mocked-styled-41 el-label"
                  for="test-static-id"
                >
                  Job Title
                </label>
              </div>
            </div>
          </div>
        </div>
        <div
          class="el-mb11"
        >
          <div
            class="mocked-styled-130 el-form-layout"
          >
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Company Name
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                MOCK_COMPANY
              </p>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Email Address
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              >
                example@email.com
              </p>
            </div>
            <div
              class="mocked-styled-133 el-input-wrap"
            >
              <h2
                class="el-text-base el-subtitle el-has-no-margin"
              >
                Profile Settings
              </h2>
              <p
                class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
              />
            </div>
          </div>
        </div>
        <h2
          class="el-text-base el-subtitle el-has-no-margin"
        >
          Customer Data
        </h2>
        <p
          class="el-text-base el-body-text el-has-grey-text"
        >
          You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
        </p>
        <div
          class="el-mb6 el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <div
                class="el-has-grey-bg el-toggle-radio-wrap"
              />
              <label
                class="mocked-styled-41 el-label"
              >
                Choose Sandbox
              </label>
            </div>
          </div>
        </div>
        <div
          class="el-mb11 el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
          role="status"
        >
          <div
            class="el-pn-icon"
            data-testid="close-icon"
          >
            <span
              class="el-icon-new el-icon"
              style="font-size: 1.25rem;"
            >
              <svg
                fill="none"
                height="1em"
                role="img"
                style="font-size: 1.25rem;"
                title="Icon image with name info"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                  fill="currentColor"
                />
              </svg>
            </span>
          </div>
          <div
            aria-live="polite"
            class="el-pn-content"
          >
            Please note, you will need to log out and log back in again to see this change take effect
          </div>
        </div>
        <div
          class="mocked-styled-2 el-button-group"
        >
          <div
            class="mocked-styled-3 el-button-group-inner"
          >
            <button
              class="el-intent-primary el-button"
              type="submit"
            >
              <div
                class="mocked-styled-0 el-button-loader"
              />
              Save Changes
            </button>
          </div>
        </div>
      </form>
      <div
        aria-hidden="true"
        class="mocked-styled-146 el-mobile-controls-bg"
      />
      <div
        class="mocked-styled-147 el-mobile-controls"
        id=":r2:"
      >
        <button
          aria-controls=":r2:"
          class="el-floating-button el-intent-primary el-button"
        >
          <div
            class="mocked-styled-0 el-button-loader"
          />
          <span
            class="el-icon-new el-icon"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              title="Icon image with name menu"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
                fill="currentColor"
              />
            </svg>
          </span>
        </button>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="mocked-styled-93 el-snack-holder"
    />
    <h1
      class="el-text-base el-title"
    >
      Profile
    </h1>
    <form>
      <div
        class="el-mb11"
      >
        <div
          class="mocked-styled-130 el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type undefined"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="name"
                placeholder="Your full name here"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Name
              </label>
            </div>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <div
              class="mocked-styled-40 el-input-group"
            >
              <input
                aria-label="Input type undefined"
                class="mocked-styled-38 el-input"
                id="test-static-id"
                name="jobTitle"
                placeholder="What role do you have at your company"
              />
              <label
                class="mocked-styled-41 el-label"
                for="test-static-id"
              >
                Job Title
              </label>
            </div>
          </div>
        </div>
      </div>
      <div
        class="el-mb11"
      >
        <div
          class="mocked-styled-130 el-form-layout"
        >
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Company Name
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              MOCK_COMPANY
            </p>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Email Address
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            >
              example@email.com
            </p>
          </div>
          <div
            class="mocked-styled-133 el-input-wrap"
          >
            <h2
              class="el-text-base el-subtitle el-has-no-margin"
            >
              Profile Settings
            </h2>
            <p
              class="el-text-base el-body-text el-has-grey-text el-has-no-margin"
            />
          </div>
        </div>
      </div>
      <h2
        class="el-text-base el-subtitle el-has-no-margin"
      >
        Customer Data
      </h2>
      <p
        class="el-text-base el-body-text el-has-grey-text"
      >
        You can choose which sandbox you wish to view based on your Reapit Product. This is specific and only associated to your developer profile.
      </p>
      <div
        class="el-mb6 el-form-layout"
      >
        <div
          class="mocked-styled-133 el-input-wrap"
        >
          <div
            class="mocked-styled-40 el-input-group"
          >
            <div
              class="el-has-grey-bg el-toggle-radio-wrap"
            />
            <label
              class="mocked-styled-41 el-label"
            >
              Choose Sandbox
            </label>
          </div>
        </div>
      </div>
      <div
        class="el-mb11 el-intent-primary el-is-active el-pn-is-full-width el-pn-is-inline el-persistent-notification"
        role="status"
      >
        <div
          class="el-pn-icon"
          data-testid="close-icon"
        >
          <span
            class="el-icon-new el-icon"
            style="font-size: 1.25rem;"
          >
            <svg
              fill="none"
              height="1em"
              role="img"
              style="font-size: 1.25rem;"
              title="Icon image with name info"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M12 2C6.477 2 2 6.477 2 12s4.477 10 10 10 10-4.477 10-10A10 10 0 0 0 12 2m1.143 15.714h-2.286v-6h2.286zm-1.143-8a1.714 1.714 0 1 1 0-3.428 1.714 1.714 0 0 1 0 3.428"
                fill="currentColor"
              />
            </svg>
          </span>
        </div>
        <div
          aria-live="polite"
          class="el-pn-content"
        >
          Please note, you will need to log out and log back in again to see this change take effect
        </div>
      </div>
      <div
        class="mocked-styled-2 el-button-group"
      >
        <div
          class="mocked-styled-3 el-button-group-inner"
        >
          <button
            class="el-intent-primary el-button"
            type="submit"
          >
            <div
              class="mocked-styled-0 el-button-loader"
            />
            Save Changes
          </button>
        </div>
      </div>
    </form>
    <div
      aria-hidden="true"
      class="mocked-styled-146 el-mobile-controls-bg"
    />
    <div
      class="mocked-styled-147 el-mobile-controls"
      id=":r2:"
    >
      <button
        aria-controls=":r2:"
        class="el-floating-button el-intent-primary el-button"
      >
        <div
          class="mocked-styled-0 el-button-loader"
        />
        <span
          class="el-icon-new el-icon"
        >
          <svg
            fill="none"
            height="1em"
            role="img"
            title="Icon image with name menu"
            viewBox="0 0 24 24"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 11H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2M4 7h16a1 1 0 1 0 0-2H4a1 1 0 0 0 0 2m16 10H4a1 1 0 1 0 0 2h16a1 1 0 1 0 0-2"
              fill="currentColor"
            />
          </svg>
        </span>
      </button>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
